# PAM

./: README.md  pyproject.toml
configs/: finetune.yaml
data/: README.md
eval/: README.md  eval.py
eval/example_data/: input_full.jsonl  input_tmp.jsonl  output_tmp.jsonl
llava/: __init__.py
llava/model/: __init__.py  builder.py  llava_arch.py
llava/model/language_model/: llava_qwen.py  modeling_qwen2.py
llava/model/multimodal_encoder/: builder.py  sam2_encoder.py
llava/model/multimodal_projector/: builder.py
llava/model/multimodal_resampler/: builder.py  modules.py  sem_perceiver.py
llava/train/: llava_trainer.py  train.py
notebooks/: image_infer_example.ipynb  mask_vis_tools.py  video_infer_example.ipynb  video_stream_infer_example.ipynb
notebooks/videos/: extract_mp4_frames.py
sam2/: setup.py
sam2/SAM_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sam2/sam2/: build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
sam2/sam2/configs/sam2.1/: sam2.1_hiera_l.yaml
sam2/sam2/modeling/: memory_attention.py  position_encoding.py  sam2_base.py
sam2/sam2/modeling/backbones/: image_encoder.py
sam2/sam2/modeling/sam/: mask_decoder.py
sam2/sam2/utils/: misc.py  transforms.py
scripts/train/: finetune_s2_3b.sh
